--- a/Wilson coefficient constraints.ipynb
+++ b/Wilson coefficient constraints.ipynb
@@ -5457,8 +5457,8 @@
     "opt = dict(x_min=-0.05, x_max=0.02, y_min=-0.05, y_max=0.02, n_sigma=(1,2), interpolation_factor=5)\n",
     "\n",
     "# plot!\n",
-    "flavio.plots.likelihood_contour(lambda x: fast_fit.log_likelihood([x[0], 0, x[1], 0]), **opt, col=0,\n",
-    "                                label='present')\n",
+    "flavio.plots.likelihood_contour(lambda x: fast_fit.log_likelihood([x[0], 0, x[1], 0]), col=0,\n",
+    "                                label='present', **opt)\n",
     "\n",
     "# labels, legend, etc.\n",
     "flavio.plots.flavio_branding(y=0.07, x=0.05)\n",
@@ -13054,10 +13054,10 @@
     "plt.figure(figsize=(4,4))\n",
     "\n",
     "# Run 4 plots\n",
-    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 4 NP'].log_likelihood([x[0], 0, x[1], 0]), **opt,\n",
-    "                   col=3, label='Run 4 NP', steps=50)\n",
-    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 4 SM'].log_likelihood([x[0], 0, x[1], 0]), **opt,\n",
-    "                   col=1, label='Run 4 SM', steps=50, contour_args={'linewidths':1.2})\n",
+    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 4 NP'].log_likelihood([x[0], 0, x[1], 0]),\n",
+    "                   col=3, label='Run 4 NP', steps=50, **opt)\n",
+    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 4 SM'].log_likelihood([x[0], 0, x[1], 0]),\n",
+    "                   col=1, label='Run 4 SM', steps=50, contour_args={'linewidths':1.2}, **opt)\n",
     "\n",
     "\n",
     "\n",
@@ -17644,10 +17644,10 @@
     "plt.figure(figsize=(4,4))\n",
     "\n",
     "# Run 5 plots\n",
-    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 5 NP'].log_likelihood([x[0], 0, x[1], 0]), **opt,\n",
-    "                   col=3, label='Run 5 NP', steps=50)\n",
-    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 5 SM'].log_likelihood([x[0], 0, x[1], 0]), **opt,\n",
-    "                   col=1, label='Run 5 SM', steps=50, contour_args={'linewidths':1.2})\n",
+    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 5 NP'].log_likelihood([x[0], 0, x[1], 0]),\n",
+    "                   col=3, label='Run 5 NP', steps=50, **opt)\n",
+    "flavio.plots.likelihood_contour(lambda x: fast_fit_future['Run 5 SM'].log_likelihood([x[0], 0, x[1], 0]),\n",
+    "                   col=1, label='Run 5 SM', steps=50, contour_args={'linewidths':1.2}, **opt)\n",
     "\n",
     "# labels, legend, etc.\n",
     "flavio.plots.flavio_branding(y=0.07, x=0.05)\n",
@@ -23596,9 +23596,9 @@
     "                             label='Full Bayesian fit')\n",
     "\n",
     "# plot the above plot again with dashed lines\n",
-    "flavio.plots.likelihood_contour(lambda x: fast_fit.log_likelihood([x[0], 0, x[1], 0]), **opt,\n",
+    "flavio.plots.likelihood_contour(lambda x: fast_fit.log_likelihood([x[0], 0, x[1], 0]),\n",
     "                   col=0, filled=False, contour_args={'linestyles':':', 'colors':'#666666'},\n",
-    "                               label='Fit with real coefficients')\n",
+    "                               label='Fit with real coefficients', **opt)\n",
     "\n",
     "# labels, legend, etc.\n",
     "plt.axhline(0, c='k', lw=0.2)\n",
@@ -26148,7 +26148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2+"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
